# scenery

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  lib.typ  rust-toolchain.toml  typst.toml
.github/workflows/: ci.yml  pages.yml  release.yml
brillouin/: LICENSE  Makefile  README.md  lib.typ  typst.toml
brillouin/examples/: bz-band.typ  hexagonal-bz.typ
brillouin/src/: figure.typ  kpath.typ  reciprocal.typ  wigner-seitz.typ
brillouin/tests/: test-figure.typ  test-kpath.typ  test-reciprocal.typ  test-wigner-seitz.typ
data/: elements.json
docs/: DEVELOPMENT.md
docs/design/: scenery.md
docs/plans/: 2026-07-11-named-object-anchors-design.md  2026-07-11-readme-scientific-visualization-design.md  2026-07-12-c60-example-design.md  2026-07-13-sphere-face-depth-design.md  (+5 more)
examples/: diamond.typ  nacl.typ  perovskite.typ
integration/: test-materia-external.typ
materia/: Makefile  README.md
materia-io/: Cargo.toml
materia-io/src/: bonds.rs  cif.rs  geom.rs  lib.rs  radii.rs  record.rs  sg_symbols.rs
materia-io/tests/: bonds.rs  cif.rs  geom.rs  poscar.rs  record.rs  xyz.rs
scenery/: Makefile  README.md  lib.typ  manual.typ  typst.toml
scenery-engine/: Cargo.toml
scenery-engine/src/: bsp.rs  camera.rs  clip.rs  cull.rs  lib.rs  pipeline.rs  schema.rs
scenery-engine/tests/: bsp.rs  clip.rs  cull.rs  sort.rs
site/: index.html
src/: crystal.typ  data.typ  geometry.typ  lattice.typ  linalg.typ  render.typ  scene.typ  structure.typ  symmetry.typ
tests/: test-api.typ  test-data.typ  test-geometry.typ  test-lattice.typ  test-render.typ  test-symmetry.typ
tools/: check_links.py  gen_bz_fixtures.py  gen_elements.py  gen_fixtures.py  gen_groups.py  gen_kpath_fixtures.py  gen_site_assets.py  requirements.txt  serve.py
wyckoff/: Makefile  README.md  lib.typ  typst.toml
wyckoff-io/: Cargo.toml
(+154 files in other folders)
