# Cargo workspace for the monorepo's two WASM plugin crates (M4 design doc,
# "two wasm artifacts"): wyckoff-io ships in wyckoff/, scenery-engine in scenery/.
[workspace]
resolver = "2"
members = ["wyckoff-io", "scenery-engine"]

# Profiles must live at the workspace root (cargo ignores profiles declared in
# member crates). Lean-wasm settings, unchanged from the Stage-1 wyckoff-io blob.
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
