# Cargo workspace for the monorepo's two WASM plugin crates: materia-io ships
# in materia/, while scenery-engine ships in scenery/.
[workspace]
resolver = "2"
members = ["materia-io", "scenery-engine"]

# Profiles must live at the workspace root (cargo ignores profiles declared in
# member crates). Lean-WASM settings are shared by both plugins.
[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
