[package]
name = "materia-io"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Host-agnostic structure-file parsing and geometry for the materia Typst package"
repository = "https://github.com/GiggleLiu/scenery"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-minimal-protocol = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
